# teckyl

./: .gitmodules  CMakeLists.txt  README.md  run_tests.sh  teckyl-genobject
teckyl/: CMakeLists.txt  Exception.h  HeaderGen.cpp  HeaderGen.h  MLIRAffineExprGen.h  MLIRGen.cpp  MLIRGen.h  PrefixedOStream.h  lang_affine.h  lang_extras.h  main.cc  patterns.h
teckyl/tc/lang/: builtins.h  error_report.h  lexer.cc  lexer.h  parser.cc  parser.h  ranges.cpp  ranges.h  sema.h  tree.cpp  tree.h  tree_views.h
teckyl/tc/lang/inference/: CMakeLists.txt  analysis.h  expr.cpp  expr.h  expression_parser.h  ranges.cpp  ranges.h  transform.cc  transformation.cpp  transformation.h
teckyl/tc/utils/: compiler_options.h
tests/exec/lib/: memref.h
tests/exec/mm/: Makefile  main.c  mm.tc
tests/exec/mm-halo/: Makefile  main.c  mm-halo.tc
tests/exec/mm-static/: Makefile  main.c  mm-static.tc
tests/inference/: convolution_1d.tc  convolution_2d.tc  filter_2d.tc  helmholtz.tc  interpolation_1.tc  interpolation_2.tc  mm.tc  mm_nowhere_mixed.tc  mm_nowhere_numeric.tc  mm_nowhere_symbolic.tc  mm_where_mixed.tc  mm_where_numeric.tc  mm_where_symbolic.tc  mttkrp.tc  multiple_ranges.tc  multiple_ranges_where.tc
tests/inference/expressions/: Ct_CmC_.exp  Ct_CmnC_.exp  Ct_CpC_.exp  Ct_CpnC_.exp  Ct_nCmC_.exp  Ct_nCpC_.exp  Pt_PmP_.exp  Pt_PmnP_.exp  Pt_PpP_.exp  Pt_PpnP_.exp  Pt_nPmP_.exp  Pt_nPpP_.exp  Vt_VmV_.exp  Vt_VmnV_.exp  Vt_VpV_.exp  Vt_VpnV_.exp  Vt_nVmV_.exp  Vt_nVpV_.exp  _CmC_tC.exp  _CmC_t_PmP_.exp  _CmC_t_PpP_.exp  _CmC_t_VmV_.exp  _CmC_t_VpV_.exp  _CmC_tnC.exp  _CmnC_tC.exp  _CpC_tC.exp  _CpC_t_PmP_.exp  _CpC_t_PpP_.exp  _CpC_t_VmV_.exp  _CpC_t_VpV_.exp  _CpC_tnC.exp  _CpnC_tC.exp  _PmP_tP.exp  _PmP_t_CmC_.exp  _PmP_t_CpC_.exp  _PmP_t_VmV_.exp  _PmP_t_VpV_.exp  _PmP_tnP.exp  _PmnP_tP.exp  _PpP_tP.exp  (+33 more)
tests/inputs/: mm_explicit.tc  mv_explicit.tc
tests/inputs/bad/: invalid-dim-size.tc
tests/inputs/bad/conversion/: int16_float16.tc  int16_int8.tc  int32_float16.tc  int32_float32.tc  int32_int16.tc  int32_int8.tc  int64_float16.tc  int64_float32.tc  int64_float64.tc  int64_int16.tc  int64_int32.tc  int64_int8.tc
tests/inputs/bad/typesuffixes/: float_literal_intsuffix.tc  i64_toobig.tc
tests/inputs/good/: numeric-tensor-dimension-spec.tc
tests/inputs/good/conversion/: int16_float32.tc  int16_int32.tc  int16_int64.tc  int2_float16.tc  int2_float32.tc  int2_float64.tc  int2_int16.tc  int2_int32.tc  int2_int64.tc  int2_int8.tc  int32_float64.tc  int32_int64.tc  int4_float16.tc  int4_float32.tc  int4_float64.tc  int4_int16.tc  int4_int32.tc  int4_int64.tc  int4_int8.tc  int8_float16.tc  int8_float32.tc  int8_float64.tc  int8_int16.tc  int8_int32.tc  int8_int64.tc  uint16_float32.tc  uint16_float64.tc  uint16_int32.tc  uint16_int64.tc  uint32_float64.tc  uint32_int64.tc  uint8_float16.tc  uint8_float32.tc  uint8_float64.tc  uint8_int16.tc  uint8_int32.tc  uint8_int64.tc
tests/inputs/good/reductions/: equals.tc  plus_equals.tc  plus_equals_bang.tc  times_equals.tc  times_equals_bang.tc
tests/inputs/good/types/: mv_double.tc  mv_float16.tc  mv_float64.tc  mv_int16.tc  mv_int2.tc  mv_int32.tc  mv_int4.tc  mv_int64.tc  mv_int8.tc
tests/inputs/good/typesuffixes/: f16.tc  f32.tc  f64.tc  i16.tc  i2.tc  i32.tc  i4.tc  i64.tc  i8.tc  u16.tc  u32.tc  u64.tc  u64_max.tc  u8.tc
